--- a/README
+++ b/README
@@ -14,6 +14,7 @@ To install, do::
     cd ~/
     git clone git://github.com/rdegges/screen.git .screen
     ln -s ~/.screen/screenrc ~/.screenrc
+    mkdir -p ~/.screen/{caps,logs}
 
 
 USAGE
